HGE Tracker improvements - population and economies added - added material predictions